# PerformanceAnalysis

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  Dockerfile_adios2  Dockerfile_nwchem  Makefile  Makefile.am  Makefile.cori  Makefile.summit  README.md  autogen.sh  build_ga.sh  chimbuko.py  configure.ac  deploy.cfg  env.cori.sh  env.summit.sh  install.summit.sh  requirements.txt  run_test.sh  select.tau  simple_reader_sst.py  simple_writer_sst.py
app/: Makefile.am  bpfile_replay.cpp  driver.cpp  driver_multirank.cpp  hpclient.cpp  hpserver.cpp  myrun.sh  pclient.cpp  pclient_stats.cpp  provdb_admin.cpp  provdb_commit.cpp  provdb_dump_state.cpp  provdb_query.cpp  provdb_rebuild_ascii.cpp  provdb_shutdown.cpp  pserver.cpp  pshutdown.cpp  sonata_profile_parse.pl  sstSinker.cpp  sst_view.cpp  sst_view_parse.pl  ws_flask_stat.py
sim/main/: Makefile.am  clean  example1.cpp  example2.cpp  example3.cpp  get_anomalies  server.cpp  server_sock.cpp  testserver.cpp  working_server.cpp
sim/main/run_example3_pdb_ext/: chimbuko_config.sh  run.sh
sim/main/server_a/: Makefile.am
sim/main/server_j/: Makefile.am
sim/src/: Makefile.am  ad.cpp  ad_params.cpp  event_id_map.cpp  id_map.cpp  provdb.cpp  pserver.cpp  thread_execution_api.cpp
src/: Makefile.am  chimbuko.cpp  function trace times (exit - entry).ipynb  generate_2_grams.py  generate_n-grams.py  global_anomaly_stats.cpp  global_counter_stats.cpp  message.cpp  n_gram analysis - Part 2 - (KMeans Clustering).ipynb  n_gram analysis.ipynb  n_gram_all_anal.ipynb  n_gram_all_analysis_(Bayesian_Changepoints).ipynb  n_gram_all_analysis_(Bayesian_Changepoints_MultiModal).ipynb  n_gram_all_analysis_(LocalOutlierFactor).ipynb  n_gram_all_analysis_(iForest).ipynb  n_gram_all_analysis_Detect_Multimodal_saveas_PNG.py  net.cpp  param.cpp  process_tJson2eeJson.sh  process_traces2json.sh  steps.sh  trace2ee.py  trace_counter.json
src/.ipynb_checkpoints/: n_gram_all_analysis_(LocalOutlierFactor)-checkpoint.ipynb
src/ad/: ADAnomalyProvenance.cpp  ADAnomalyProvenance2.cpp  ADCounter.cpp  ADEvent.cpp  ADLocalAnomalyMetrics.cpp  ADLocalCounterStatistics.cpp  ADLocalFuncStatistics.cpp  ADMetadataParser.cpp  ADMonitoring.cpp  ADNetClient.cpp  ADNormalEventProvenance.cpp  ADOutlier.cpp  ADParser.cpp  ADProvenanceDBclient.cpp  ADProvenanceDBengine.cpp  ADcombinedPSdata.cpp  ADglobalFunctionIndexMap.cpp  ADio.cpp  AnomalyData.cpp  AnomalyStat.cpp  ExecData.cpp  FuncAnomalyMetrics.cpp  FuncStats.cpp  utils.cpp
src/core/: chimbuko.cpp  message.cpp  net.cpp  param.cpp
src/core/ad/: ADDataInterface.cpp  ADNetClient.cpp  ADOutlier.cpp  ADProvenanceDBclient.cpp  ADProvenanceDBengine.cpp  ADcmdLineArgs.cpp  ADio.cpp  utils.cpp
src/core/net/: local_net.cpp  mpi_net.cpp  zmq_net.cpp  zmqme_net.cpp
src/core/param/: copod_param.cpp  hbos_param.cpp  sstd_param.cpp
src/core/provdb/: ProvDBclient.cpp  ProvDBengine.cpp  ProvDBpruneCore.cpp  ProvDButils.cpp
src/core/pserver/: PSProvenanceDBclient.cpp  PSglobalProvenanceDBclient.cpp  PSparamManager.cpp  PSshardProvenanceDBclient.cpp  PSstatSender.cpp
src/core/util/: ADIOS2parseUtils.cpp  DispatchQueue.cpp  Histogram.cpp  PerfStats.cpp  RunStats.cpp  curlJsonSender.cpp  environment.cpp  error.cpp  json.cpp  map.cpp  memutils.cpp  string.cpp  time.cpp
src/modules/: factory.cpp
src/modules/performance_analysis/: chimbuko.cpp
src/net/: hzmq_net.cpp  local_net.cpp  mpi_net.cpp  zmq_net.cpp  zmqme_net.cpp
src/param/: copod_param.cpp  hbos_param.cpp  sstd_param.cpp
src/prototype/: generate_n-grams.py  parseJson.py
src/provdb/: provDBclient.cpp
src/pserver/: AggregateAnomalyData.cpp  AggregateFuncAnomalyMetrics.cpp  AggregateFuncAnomalyMetricsAllRanks.cpp  AggregateFuncStats.cpp  AnomalyStat.cpp  FunctionProfile.cpp  GlobalAnomalyMetrics.cpp  GlobalAnomalyStats.cpp  GlobalCounterStats.cpp  NetPayloadRecvCombinedADdata.cpp  PSProvenanceDBclient.cpp  PSfunctions.cpp  PSglobalFunctionIndexMap.cpp  PSparamManager.cpp  PSstatSender.cpp  global_anomaly_stats.cpp  global_counter_stats.cpp
src/util/: ADIOS2parseUtils.cpp  Anomalies.cpp  Histogram.cpp  PerfStats.cpp  RunStats.cpp  curlJsonSender.cpp  environment.cpp  error.cpp  map.cpp  memory.cpp  memutils.cpp  string.cpp  time.cpp
test/: Makefile.am  anomaly_test.py  chimbuko.cfg  mainAD.cpp  mainADwithProvDB.cpp  mainNet.cpp  mainProvDBclient.cpp  mainProvDBpserverClient.cpp  mainSimple.cpp  n_gram_test.py  parser_test.py  peo_test.py  perfanal.cfg  provDBclientConnectDisconnect.cpp  run_ad.sh  run_ad_with_provdb.sh  run_all.sh  run_chimbuko.sh  run_net.sh  run_provdb_autoshutdown_test.sh  run_provdb_client_test.sh  run_provdb_pserver_client_test.sh  run_stat_sender.sh  run_test.sh  run_tests.sh  simple_writer_sst.py  sst_reader.py  sst_reader_simple_mpi.py  sst_writer.py  test.cfg  test_ad.cpp  test_event.py  test_net.cpp  test_outlier.py  test_param.cpp  test_parser.py  test_runstat.py  test_stat_sender.cpp  test_utils.cpp
test/core/: Makefile.am
test/data/: chimbuko.cfg  tau-metrics-1.bp  tau-metrics-2.bp  tau-metrics-3.bp
test/unit_tests/: Makefile.am  run_all.sh  unit_test_cmdline.hpp  unit_test_common.hpp  unit_test_main.cpp  unit_test_main_mpi.cpp
test/unit_tests/ad/: ADAnomalyProvenance.cpp  ADAnomalyProvenance2.cpp  ADCounter.cpp  ADEvent.cpp  ADExecDataInterface.cpp  ADLocalAnomalyMetrics.cpp  ADLocalCounterStatistics.cpp  ADLocalFuncStatistics.cpp  ADMetadataParser.cpp  ADMonitoring.cpp  ADNetClient.cpp  ADNormalEventProvenance.cpp  ADOutlier.cpp  ADParser.cpp  ADcombinedPSdata.cpp  ADglobalFunctionIndexMap.cpp  ADio.cpp  AnomalyData.cpp  COPODOutlier.cpp  COPODOutlierADs.cpp  FuncAnomalyMetrics.cpp  HBOSOutlier.cpp  HBOSOutlierADs.cpp  HBOSOutlierDistributions.cpp  HBOSOutlierMultipleAD.cpp  HBOSOutlierTestBPFile.cpp  Makefile.am  SSTDOutlierTestBPFile.cpp  unit_test_ad_common.hpp  utils.cpp
test/unit_tests/core/: Makefile.am
test/unit_tests/modules/: Makefile.am
test/unit_tests/net/: LocalNet.cpp  Makefile.am  ZMQMENet.cpp  ZMQNet.cpp
test/unit_tests/param/: Makefile.am  copod_param.cpp  (+2 more)
(+901 files in other folders)
